# docsync

./: .gitattributes  .gitignore  CLAUDE.md  README.md  action.yml  pyproject.toml
.docsync/: config.yml  manifest.yml
.docsync/state/: cursors.json
.github/workflows/: ci.yml  docsync-self.yml
deploy/: README.md  SELF-HOSTED.md  local-real-run.sh
docs/: docs.json
docs-docusaurus/: docusaurus.config.js  package.json  sidebars.js
docs-docusaurus/.docsync/: config.yml  manifest.yml
docs/architecture/: data-flow.mdx  ingestion-engine.mdx  llm-integration.mdx  planning-engine.mdx  system-overview.mdx
docs/concepts/: authoring-pipeline.mdx  change-detection.mdx  code-ingestion.mdx  configuration.mdx  documentation-planning.mdx  embedding-search.mdx  how-docsync-works.mdx  multi-repo-strategies.mdx  page-kinds-sections.mdx  quality-assessment.mdx
docs/getting-started/: basic-workflow.mdx  installation.mdx  introduction.mdx  quick-start.mdx  (+1 more)
scripts/: vendor_model.py
tests/: test_adapters.py  test_bootstrap.py  test_cli.py  test_config_merge.py  test_config_validation.py  test_cost.py  test_critique.py  test_dashboard.py  test_diff.py  test_docstrings.py  test_docstyle.py  test_docusaurus.py  test_edits.py  test_embeddings.py  test_eval.py  test_events.py  test_history.py  test_impact.py  test_infer.py  test_ingest.py  test_llm_backends.py  test_nav.py  test_pipeline.py  test_polish.py  test_pool.py  test_pr.py  test_pysymbols.py  test_repomode.py  test_scaffold.py  test_style.py  test_thoroughness.py  test_validate.py  test_validate_newpage.py
(+80 files in other folders)
