[tool.poetry]
name = "docsync"
version = "0.1.0"
description = "Keep documentation in sync with code: ingest merged-PR diffs and open surgical doc-update PRs in CI."
authors = ["Yarin Shitrit <yshitrit123@gmail.com>"]
readme = "README.md"
packages = [{ include = "docsync", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
anthropic = ">=0.40"
pydantic = ">=2.6"
typer = ">=0.12"
"ruamel.yaml" = ">=0.18"
python-frontmatter = ">=1.1"
unidiff = ">=0.7"
numpy = ">=1.26"
# Embeddings recall-net is optional: anchors cover the high-drift pages without it.
# Install with `poetry install -E embeddings` to enable Stage-3 embedding candidates.
sentence-transformers = { version = ">=2.6", optional = true }

[tool.poetry.extras]
embeddings = ["sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.5"

[tool.poetry.scripts]
docsync = "docsync.cli:app"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
